--- a/finalproject/siteplan.html
+++ b/finalproject/siteplan.html
@@ -24,7 +24,6 @@
   <link rel="stylesheet" href="styles/siteplan.css">
 
 
-  <!--Fonte Family-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
@@ -69,7 +68,7 @@
 
   <main>
 
-    <!-- ------------------------Steps 2-3------------------------------ -->
+
     <h2>Overview</h2>
     <hr>
     <h3>Purpose</h3>
@@ -77,7 +76,7 @@
       destination and enjoy our diverse cuisine and services over our competitors. We want our website to give visitors
       a very happy vibe. Photos of customers enjoying our services and products are very important. Showing feedback
       about our customers' satisfaction will also play an important role in convincing people to choose us.</p>
-    <!-- change this -->
+
 
     <h3>Scenarios</h3>
 
@@ -93,9 +92,7 @@
     <p>The target audience is those who seek our country as a tourist destination as well as those looking to discover
       our cultural diversity and also something to do in their leisure time. The price of our services will be
       reasonable to satisfy our clientele. Most visitors will visit our website via phone or other mobile devices.</p>
-    <!-- change this -->
 
-    <!-- ------------------------Steps 4-8------------------------------ -->
 
     <h3>
       Color Palette
@@ -123,7 +120,6 @@
       </tr>
     </table>
 
-    <!-- ------------------------Step 9------------------------------ -->
 
     <h3>
       Typography
@@ -161,7 +157,6 @@
       matter what type of river adventures you are seeking, White Water Rafting Company can make it happen for you.
     </p>
 
-    <!-- ------------------------Step 10------------------------------ -->
 
     <h3>
       Navigation
@@ -231,10 +226,10 @@
     </ol>
 
     <h2>Wireframe in wide view</h2>
-    <img src="images/Home Page Wireframe.png" alt="home page wireframe">
+    <img src="images/Home Page Wireframe.png" alt="home page wireframe" />
 
     <h2>Wireframe in mobile view</h2>
-    <img src="images/mobile wireframe.png" alt="mobile wireframe">
+    <img src="images/mobile wireframe.png" alt="mobile wireframe" />
 
   </main>
 
